Made everything components Start of fixes to some components not showing up

--- a/MoodMedia.admin/styles.css
+++ b/MoodMedia.admin/styles.css
@@ -96,7 +96,7 @@
 .shadow-sm {
   box-shadow: 0 .125rem .25rem rgba(0,0,0,.075)!important;
 }    
-}
+
 /* user-dashboard-info-box */
 .user-dashboard-info-box .candidates-list .thumb {
   margin-right: 20px;
@@ -261,3 +261,17 @@
   margin-right: 20px;
 }
 /* #endregion */
+
+.btn-fix {
+  padding: 0;
+  border: none;
+  white-space: normal;
+  background: none;
+  width: 100%;
+}
+
+.custom-card {
+  width: 100%;
+  padding: 0;
+  align-items: center;
+}
